force-app/main/default/objects/Employee__c/fields/ACTIVE__c.field-meta.xml
<CustomField>
    <fullName>ACTIVE__c</fullName>
    <defaultValue>true</defaultValue>
    <label>ACTIVE</label>
    <type>Checkbox</type>
</CustomField>