force-app/main/default/objects/Employee__c/fields/AGE__c.field-meta.xml
<CustomField>
    <fullName>AGE__c</fullName>
    <formula>IF(
    ISBLANK(DOB__c),
    NULL,
    YEAR(TODAY()) - YEAR(DOB__c)
    - 
    IF(
        TODAY() &lt; DATE(YEAR(TODAY()), MONTH(DOB__c), DAY(DOB__c)),
        1,
        0
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AGE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>