force-app/main/default/objects/Employee__c/fields/COMPANY__c.field-meta.xml
<CustomField>
    <fullName>COMPANY__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>COMPANY</label>
    <referenceTo>COMPANY__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>