force-app/main/default/objects/Employee__c/fields/Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID__c</fullName>
    <displayFormat>D-{000000}</displayFormat>
    <externalId>true</externalId>
    <label>Employee ID</label>
    <type>AutoNumber</type>
</CustomField>