force-app/main/default/objects/Employee__c/fields/GYRUS_SULCUS__c.field-meta.xml
<CustomField>
    <fullName>GYRUS_SULCUS__c</fullName>
    <label>GYRUS SULCUS</label>
    <length>50</length>
    <referenceTo>GYRUS_SULCUS__x</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>ExternalLookup</type>
</CustomField>