force-app/main/default/objects/Employee__c/fields/IDENTITY_CARD_NO__c.field-meta.xml
<CustomField>
    <fullName>IDENTITY_CARD_NO__c</fullName>
    <label>IDENTITY CARD NO.</label>
    <length>80</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>