force-app/main/default/objects/Employee__c/fields/JOB_ROLE__c.field-meta.xml
<CustomField>
    <fullName>JOB_ROLE__c</fullName>
    <label>JOB ROLE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>JOB_ROLES</valueSetName>
    </valueSet>
</CustomField>