force-app/main/default/objects/Employee__c/fields/PHONE_NO__c.field-meta.xml
<CustomField>
    <fullName>PHONE_NO__c</fullName>
    <label>PHONE NO.</label>
    <type>Phone</type>
</CustomField>