force-app/main/default/objects/Employee__c/fields/SALARY__c.field-meta.xml
<CustomField>
    <fullName>SALARY__c</fullName>
    <label>SALARY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>