force-app/main/default/objects/Employee__c/recordTypes/WAITER.recordType-meta.xml
<RecordType>
    <fullName>WAITER</fullName>
    <active>true</active>
    <label>WAITER</label>
</RecordType>