force-app/main/default/objects/Employee__c/validationRules/AGE_SHOULD_BE_18_OR_ABOVE.validationRule-meta.xml
<ValidationRule>
    <fullName>AGE_SHOULD_BE_18_OR_ABOVE</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
    (YEAR(TODAY()) - YEAR(DOB__c))
    -
    IF(
        TODAY() &lt; DATE(YEAR(TODAY()), MONTH(DOB__c), DAY(DOB__c)),
        1,
        0
    )
    &gt;= 18
)</errorConditionFormula>
    <errorDisplayField>DOB__c</errorDisplayField>
    <errorMessage>YOUR AGE SHOULD BE 18+</errorMessage>
</ValidationRule>