force-app/main/default/objects/Employee__c/validationRules/ONLY_DIGITS_ALLOWED.validationRule-meta.xml
<ValidationRule>
    <fullName>ONLY_DIGITS_ALLOWED</fullName>
    <active>false</active>
    <description>ONLY DIGITS ALLOWED</description>
    <errorConditionFormula>NOT(REGEX( PHONE_NO__c, &quot;^\\d{10}$&quot; ))</errorConditionFormula>
    <errorDisplayField>PHONE_NO__c</errorDisplayField>
    <errorMessage>Please enter exactly 10 numeric digits with no spaces or special characters. (Current length is 10).</errorMessage>
</ValidationRule>