force-app/main/default/objects/Employee__c/validationRules/SPACE_AFTER_EVERY_4_DIGIT.validationRule-meta.xml
<ValidationRule>
    <fullName>SPACE_AFTER_EVERY_4_DIGIT</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(
    REGEX( 
        IDENTITY_CARD_NO__c, 
        &quot;^\\d{4}\\s\\d{4}\\s\\d{4}\\s\\d{4}$&quot; 
    )
)</errorConditionFormula>
    <errorDisplayField>IDENTITY_CARD_NO__c</errorDisplayField>
    <errorMessage>Please enter 16 digits with a space after every 4 digits (e.g., 1234 5678 9012 3456).</errorMessage>
</ValidationRule>