force-app/main/default/objects/Employee__c/listViews/added_this_week.listView-meta.xml
<ListView>
    <fullName>added_this_week</fullName>
    <columns>NAME</columns>
    <columns>COMPANY__c</columns>
    <columns>SALARY__c</columns>
    <columns>COUNTRY__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>added this week</label>
</ListView>