force-app/main/default/objects/Employee__c/listViews/working_at.listView-meta.xml
<ListView>
    <fullName>working_at</fullName>
    <columns>NAME</columns>
    <columns>COMPANY__c</columns>
    <columns>COUNTRY__c</columns>
    <columns>ACTIVE__c</columns>
    <columns>Employee_ID__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>SALARY__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>COMPANY__c</field>
        <operation>equals</operation>
        <value>SENDIT</value>
    </filters>
    <label>working at</label>
</ListView>