force-app/main/default/objects/Employee__c/listViews/works_at.listView-meta.xml
<ListView>
    <fullName>works_at</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>COUNTRY__c</field>
        <operation>equals</operation>
        <value>India</value>
    </filters>
    <label>works at</label>
</ListView>